# fridom

./: .gitignore  .readthedocs.yaml  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
FIDOM/Framework/: Animation.py  BoundaryConditions.py  DiagnoseImbalanceBase.py  FieldVariable.py  GridBase.py  ModelBase.py  NNMDBase.py  NetCDFWriter.py  OptimalBalanceBase.py  ProjectionBase.py  StateBase.py
FIDOM/NonHydrostatic/: BoundaryConditions.py  DiagnoseImbalance.py  Eigenvectors.py  Grid.py  InitialConditions.py  Model.py  ModelPlotter.py  ModelSettings.py  Plot.py  Projection.py  Source.py  State.py
benchmark/: benchmark_linear_nh.py  benchmark_pfft.py
demo/: linear_sw_model.ipynb
demo/NonHydrostatic/: 01_quickstart.ipynb  02_state_and_field.ipynb  03_plotting.ipynb  04_gpu_acceleration.ipynb  05_write_snapshots.ipynb  06_animations.ipynb
demo/ShallowWater/: 01_quickstart.ipynb  02_state_and_field.ipynb  03_plotting.ipynb  04_gpu_acceleration.ipynb  05_write_snapshots.ipynb  06_animations.ipynb
docs/: Makefile  create_api.py  requirements.txt  update_documentation.sh
docs/source/: auto_generate_api.py  conf.py  creating_own_models.rst  custom_scraper.py  fridom.framework.domain_decomposition.rst  fridom.framework.grid.rst  fridom.framework.modules.animation.rst  fridom.framework.modules.rst  fridom.framework.projection.rst  fridom.framework.rst  fridom.framework.time_steppers.rst  fridom.nonhydro.rst  (+26 more)
fridom/: __init__.py
notes/: levante_conda_environment.md
py_test/: framework_test.py  main_test.py  nonhydrostatic_test.py
tests/: conftest.py
(+722 files in other folders)
